examples/test/testpolicy13931.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13931
  namespace: namespace174
spec:
  podSelector:
    matchLabels:
      key34: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value12
      podSelector:
        matchLabels:
          key48: value34
          key49: value33
          key43: value40
